fixed styling issues with results not being aligned correctly

--- a/src/Components/styles/employee.css
+++ b/src/Components/styles/employee.css
@@ -6,11 +6,13 @@
 .employee_avatar {
   position: relative;
   border-radius: 50%;
-  margin-bottom: 0.25rem;
+  margin-bottom: -0.5rem;
 }
 
 .employee_name {
   position: relative;
   left: 1.75rem;
-  bottom: 1rem;
+  bottom: 0.75rem;
+  color: gray;
+  font-size: 0.60rem;
 }
