--- a/src/Components/styles/search.css
+++ b/src/Components/styles/search.css
@@ -1,7 +1,7 @@
 .container {
   position: relative;
   margin-top: 0.5rem;
-  left: 1rem;
+  left: 0.5rem;
 }
 
 .results_container {
